# ferias

./: Makefile.am  README.md  autogen.sh  configure.ac
doc/: DB-schema.sql  DB-schema.txt  REST.txt
misc/: ferias.service.in  ferias.spec
src/milter/: configuration.cc  configuration.h  feriasmilter.cc  feriasmilter.h  httpclient.cc  httpclient.h  mailer.cc  mailer.h  main.cc  milterprivate.h  vsjson.c  vsjson.h
src/web/: auth.php  auth_local.php
tools/: db-schema.sql
